# appmap_tracing_test

./: .gitignore  Cargo.toml  appmap.yml
src/: appmap_definition.rs  extensions.rs  lib.rs  main.rs
src/appmap_definition/: event_id.rs
src/node_functions/: mod.rs
