[package]
name = "appmap_tracing_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"

serde = { version = "1.0", features=["derive", "default"] }
serde_json = "1.0"
